[project]
name = "janus"
version = "0.1.0"
description = "A Postfix greylisting daemon"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]",
    "dnspython",
]

[project.optional-dependencies]
sqlite   = ["aiosqlite"]
postgres = ["asyncpg"]
mysql    = ["aiomysql"]

[project.scripts]
janus = "janus.__main__:main"

[dependency-groups]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "aiosqlite",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/janus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/janus"]
branch = true

[tool.coverage.report]
show_missing = true
